# OpenGl

./: CMakeLists.txt
lib/: glad.c
src/: main.cpp
src/CoreGl/: GlWrapper.cpp  GlWrapper.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.hpp
src/Triangle/: Triangle.cpp  Triangle.hpp
